--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>FCC RecipeBox</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=500, initial-scale=1">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
   </head>
