--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <title>FCC RecipeBox</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=500, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-
   </head>
   <body>
     <div id="app"></div>
   </body>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-   <script src="/dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </html>
